feat: allow inviting to existing events
